--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "magento/module-checkout": "100.3.*",
         "magento/module-sales": "102.0.*",
         "magento/theme-frontend-blank": "100.3.6",
-        "sveawebpay/nwt-magento2-checkout": "^1.2.6"
+        "sveawebpay/nwt-magento2-checkout": "*"
     },
     "type": "magento2-theme",
     "license": [
