Update php version requirement

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "geralds/magento2-theme-frontend-brons",
     "description": "N/A",
     "require": {
-        "php": "~7.3.0",
+        "php": "~7.3.0||~7.4.0",
         "magento/module-catalog": "103.0.*",
         "magento/module-checkout": "100.3.*",
         "magento/module-sales": "102.0.*",
