--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "magento/module-catalog": "103.0.*",
         "magento/module-checkout": "100.3.*",
         "magento/module-sales": "102.0.*",
-        "magento/theme-frontend-blank": "100.3.6",
+        "magento/theme-frontend-blank": "100.3.*",
         "sveawebpay/nwt-magento2-checkout": "*"
     },
     "type": "magento2-theme",
